# Scylla-Mongo-Benchmark

./: Benchmark Test Plan.jmx  Cargo.toml  Dockerfile  README.md  Scylla Mongo Test.postman_collection.json  compose.mongo.yaml  compose.scylla.yaml
src/: main.rs
src/clients/: mod.rs  mongo.rs  scylla.rs
src/models/: mod.rs  user.rs
src/models/requests/: mod.rs  query.rs
src/repository/: user.rs
src/routes/: user.rs
