[package]
name = "scylla"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
scylla = "0.10"
tokio = { version = "1.12", features = ["full"] }
futures = "0.3.6"
uuid = "1.0"
rocket = { version = "0.5.0", features = ["json"] }
serde = "1.0.193"
serde_json = "1.0.108"
clap = { version = "4.4.8", features = ["derive"] }
